--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div style="display: inline-flex; flex-direction: column; justify-content: space-between; align-items: center;">
-      <div id="root"></div>
+      <div id="root"><!-- style="height: 100%; width: 100%; position: relative"--></div>
       <div id="foot" style="text-align: center; font-size: x-small; color: gray; padding: 10px;">
         <p>
         Whack-A-Bill
